# django-aws-things

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  setup.cfg
aws/: template.yaml
aws/apps/: app.py  requirements.txt
challenge/: settings.py  urls.py
challenge/apps/core/: admin.py  apps.py  models.py
challenge/apps/core/api/v1/: serializers.py  views.py
challenge/apps/core/migrations/: 0001_initial.py
challenge/apps/users/: admin.py  apps.py  models.py
challenge/apps/users/api/v1/: serializers.py  views.py
challenge/apps/users/migrations/: 0001_initial.py
challenge/support/: decorators.py  django_helpers.py  utils.py
scripts/: start-tests.sh  start.sh
tests/integration/apps/core/api/v1/: test_views.py
tests/integration/apps/users/api/v1/: test_views.py
